[tool.poetry]
name = "repl_pygame_beta_Flappy-Bird"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
cursor = "^1.3.5"
names = "^0.3.0"
replit = "^3.2.5"
colorama = "^0.4.6"
alien-invasion1 = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
